<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|center_vertical" >

        <EditText
            android:id="@+id/edit_text_out"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:inputType="text" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:text="@string/send_hex" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:paddingTop="3dip"
        android:paddingLeft="5dip"
        android:paddingBottom="0dip"
        android:paddingRight="0dip"
         >

        <LinearLayout
            android:id="@+id/ll_tx"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_tx_byte"
                android:layout_width="0dip"
                android:layout_height="30dip"
                android:gravity="left|center_vertical"
                android:layout_weight="2"
                android:text="@string/tx_bytes" />

            <TextView
                android:id="@+id/lbl_tx_packet"
                android:layout_width="0dip"
                android:layout_height="30dip"
                android:gravity="left|center_vertical"
                android:layout_weight="3"
                android:text="@string/tx_packets" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_rx_byte"
                android:layout_width="0dip"
                android:layout_height="30dip"
                android:gravity="left|center_vertical"
                android:layout_weight="2"
                android:text="@string/rx_bytes" />

            <TextView
                android:id="@+id/lbl_rx_packet"
                android:layout_width="0dip"
                android:layout_height="30dip"
                android:gravity="left|center_vertical"
                android:layout_weight="3"
                android:text="@string/rx_packets" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/reset" />
    </RelativeLayout>

</LinearLayout>